# nevina-mcp

./: .gitignore  README.md  plugin.json  pyproject.toml  requirements.txt
server/: __init__.py  nevina_client.py  server.py  tools.py
tests/: test_integration.py  test_nevina_client.py  test_tools.py
