[project]
name = "nevina-mcp"
version = "0.1.0"
description = "MCP server exposing NVE's NEVINA4 catchment-delineation service to Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vetle Lehland" }]
dependencies = [
  "httpx>=0.27,<1.0",
  "mcp>=1.0,<2.0",
  "pyproj>=3.6,<4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
